# temple-trap-solver

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: board.hpp  input.hpp  main.cpp  renderer.hpp  solver.hpp  types.hpp
src/cli/: input.hpp  main.cpp  renderer.hpp
src/core/: board.hpp  solver.hpp  types.hpp
temple-trap-ui/: index.html  package-lock.json  package.json
temple-trap-ui/public/: temple_trap_solver.js  temple_trap_solver.wasm
temple-trap-ui/src/: App.jsx  ThreeScene.jsx
